<resources>
    <string name="app_name">My Library</string>
    <string name="title_activity_main">Users</string>
    <string name="title_activity_user_details">User Details</string>

    <string name="details_email">Email:</string>
    <string name="details_phone">Phone:</string>
    <string name="details_address">Address:</string>
    <string name="details_favorite_fruit">Favorite Fruit:</string>
    <string name="details_about">About:</string>
    <string name="home_button_request_user_data">Request User Data</string>
    <string name="details_eye"> eye</string>
    <string name="details_years"> years</string>
</resources>
